TSG S7a: updated dialogue

--- a/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
@@ -298,7 +298,7 @@
         [/message]
         [message]
             speaker=narrator
-            message= _ "Soldiers with the <i>quick</i> trait will be useful for traversing cave terrains."
+            message= _ "Soldiers with the <i>quick</i> trait will be useful for traversing rough cave hexes."
             image=wesnoth-icon.png
         [/message]
 #endif
@@ -317,7 +317,7 @@
                     [/variable]
                 [/show_if]
                 {OPTIONAL_OBJECTIVE_CAPTION}
-                description= _ "Meet with and offer the troll leader $troll_help_cost| gold to receive their help"
+                description= _ "Meet with the troll leader and offer $troll_help_cost| gold to receive their help"
                 condition=win
             [/objective]
             [objective]
@@ -360,7 +360,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "Such creatures may be summoned by conjurers of sufficient skill, though I suspect that this is something other beast, twisted by the foul energy of this place. It must have been set here as a guardian."
+            message= _ "Such creatures may be summoned by conjurers of sufficient skill, though I suspect that this is some other beast, twisted by the foul energy of this place. It must have been set here as a guardian."
         [/message]
     [/event]
 
@@ -377,10 +377,10 @@
 
         [redraw][/redraw]
 
-        # bad grammar/different manner of speech here for the trolls
+        # po: bad grammar/different manner of speech here for the trolls
         [message]
             speaker=Grek
-            message= _ "Ock! I sees some humans and elfsies! What are you doing in our caves?"
+            message= _ "Who go there? I see... I sees some humans and elfsies! What are you doing in our caves?"
         [/message]
 
         [message]
@@ -571,7 +571,7 @@
                     [/message]
                     [message]
                         speaker=Deoran
-                        message= _ "<i>I don't know, trolls are not as stupid as you might think. They might be of use if we can find the gold to pay them. But for now, we have to continue on alone.</i>"
+                        message= _ "<i>I don't know, trolls might not be as stupid as you think. They may be of use if we can find the gold to pay them. But for now, we have to continue on alone.</i>"
                     [/message]
 
                     {VARIABLE late_payment_for_troll_help yes}
@@ -729,7 +729,7 @@
 
         [message]
             speaker="Mal M'Brin"
-            message = _ "They bound me, the accursed humans, they bound me in iron! Ahh, the cold iron on my skin... they burned me with it day and night for days, weeks, tormenting me endlessly as they gleaned the secrets of the undead from my mind!"
+            message = _ "They bound me, the accursed humans, they bound me in iron! Ahh, the cold iron on my skin... they burned me with it day and night for days, weeks, tormenting me endlessly as they tried to pry the secrets of the undead from me!"
         [/message]
 
         [message]
@@ -739,22 +739,32 @@
 
         [message]
             speaker="Ethiliel"
-            message= _ "All elves feel the shadow of iron, and to those who walk our higher paths, it is a bane. This touches on mysteries that are not for men to know, human. I bind you never to speak of it. Cruel as those abominable brigands were, they could not have known the hurt they inflicted upon my master."
+            message= _ "All elves feel the shadow of iron, and to those who walk our higher paths, it is a bane that breaks the body and twists the mind. This touches on mysteries that are not for men to know, human. I bind you never to speak of it. Cruel as those abominable brigands were, they could not have known the hurt they inflicted upon my master."
         [/message]
 
         [message]
             speaker="Mal M'Brin"
-            message = _ "They knew, they knew! They reveled in my hurt, relished each and everyone of my cries of pain! But their minds were weak... I knew this, and I knew it would be the means to my vengeance. I taught them to summon powers they could not control. In their greed, they never stopped to wonder if they could master the sorcery, or if it would master them and their minds in turn. Men are all blind with avarice!"
-        [/message]
-
-        [message]
-            speaker="Mal M'Brin"
-            message = _ "Content with the meager tricks I taught them, they never even noticed as I siphoned away the energy they summoned for myself. I grew more powerful day by day, yet not one of those filthy tree-killers thought that I posed a threat to them. Even when I ascended to undeath, they never questioned my teachings until they had all become my mindless slaves!"
+            message = _ "They knew, they knew! They reveled in my hurt, relished each and everyone of my cries of pain! Even as I asked... as I <i>begged</i> for mercy, they would not relent. I did not know day from night; the light and the shadows, heat and cold, everything was one and the same as the iron bled itself into my veins. Imagine! I, a great and powerful sage, crippled and defeated by nothing more than a rusted pair of bracelets... it was... humiliating..."
         [/message]
 
         [message]
             speaker="Ethiliel"
             message= _ "Mebrin..."
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message = _ "At my lowest point, they broke me. I finally gave in, telling them that I would teach them to raise the dead if they would just take the accursed shackles off me. I knew... I knew that once the first strand of black magic left my hands, there would be no turning back. I knew, but what did it matter?! They had killed my brethren, taken my dignity, tortured me to the brink of death! What did I have left?! Nothing... nothing... but vengeance."
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message = _ "Humans are ultimately a week breed. I taught them to summon powers they could not control. In their greed, they never stopped to wonder if they could master the sorcery, or if it would master them and their minds in turn. Content with only meager tricks, they never even noticed as I siphoned away the energy they summoned for myself. I grew more powerful day by day, yet not one of those filthy tree-killers thought that I posed a threat to them. Even when I ascended to undeath, they never questioned my teachings until they had all become my mindless slaves!"
+        [/message]
+
+        [message]
+            speaker="Ethiliel"
+            message= _ "Mebrin, please..."
         [/message]
 
         [message]
