TSG S7b: minor dialogue fixes

--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -181,7 +181,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "We are finally back in Wesnoth, but look! The undead have almost caught up to us!"
+            message= _ "We are finally back in Kerlath, but look! The undead have almost caught up to us!"
         [/message]
         [message]
             speaker=Sir Gerrick
@@ -326,7 +326,7 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Argh! I only hope... we have bought enough time... for Deoran..."
+            message= _ "I only hope... we have bought enough time... for Deoran..."
         [/message]
         [kill]
             x,y=$x1,$y1
