TSG S8a: updated dialogue wording

--- a/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
@@ -184,7 +184,7 @@
 
         [message]
             speaker="Tharzo Kalain"
-            message= _ "Nooo! My... revenge..."
+            message= _ "No! My... revenge..."
         [/message]
     [/event]
 
@@ -235,7 +235,7 @@
 
                 [message]
                     speaker="Deoran"
-                    message= _ "We and our elvish allies, have won a great battle against a lich. The undead are no more."
+                    message= _ "We and our elvish allies have won a great battle against a lich. The undead are no more."
                 [/message]
 
                 [message]
