TSG S8b: dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -313,12 +313,12 @@
         [message]
             speaker=Deoran
             image=portraits/deoran-sad.png
-            message= _ "Look there! The undead army has broken through Sir Gerrick’s line! Alas, he is lost!"
+            message= _ "Look there! The undead have broken through Sir Gerrick’s line! Alas, he is lost!"
         [/message]
 
         [message]
             speaker=Moreth
-            message= _ "Gerrick was my mentor and caretaker ever since I was little. I wish he had not sacrificed himself for us, but his bravery and courage is truly admirable. Today, we will defeat the undead and avenge him!"
+            message= _ "Gerrick was my mentor and caretaker ever since I was little. I have admired his bravery and courage for a long time and always aspired to be a warrior as mighty as he was. Today, we will defeat the undead and avenge him!"
         [/message]
 
         [if]
@@ -333,7 +333,7 @@
             [then]
                 [message]
                     speaker=Deoran
-                    message= _ "I, too, wish that he were still here to fight with us today. But in the narrow window his valiant stand gave us, we have gathered some of the provincial guard and reinforced our defenses!"
+                    message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick's valiant stand gave us, we have gathered some of the provincial guard and reinforced our defenses!"
                 [/message]
             [/then]
             [elseif]
@@ -348,7 +348,7 @@
                 [then]
                     [message]
                         speaker=Deoran
-                        message= _ "I, too, wish that he were still here to fight with us today. But in the narrow window his valiant stand gave us, we have gathered the whole provincial guard and reinforced our defenses!"
+                        message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick's valiant stand gave us, we have gathered the whole provincial guard and reinforced our defenses!"
                     [/message]
                 [/then]
             [/elseif]
@@ -364,7 +364,7 @@
                 [then]
                     [message]
                         speaker=Deoran
-                        message= _ "I, too, wish that he were still here to fight with us today. But in the narrow window his valiant stand gave us, we have gathered the whole provincial guard and fully embattled the city!"
+                        message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick's valiant stand gave us, we have gathered the whole provincial guard and fully embattled the city!"
                     [/message]
                 [/then]
             [/elseif]
@@ -379,7 +379,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "Minister Hylas, what word is there from the allies of the council?"
+            message= _ "Minister Hylas, what word is there from the allies of the Council?"
         [/message]
 
         [if]
@@ -390,7 +390,7 @@
             [then]
                 [message]
                     speaker=Minister Hylas
-                    message= _ "The council of Westin has summoned some aid from our allies to the north!"
+                    message= _ "The Council of Westin has summoned some aid from our allies to the north!"
                 [/message]
                 # wmllint: local spelling Mefel
                 {NAMED_LOYAL_UNIT 1 (Silver Mage) 11 1 (Minister Mefel) (_"Minister Mefel")}
@@ -405,7 +405,7 @@
             [else]
                 [message]
                     speaker=Minister Hylas
-                    message= _ "The council of Westin has summoned many of our brethren from our allies to the north!"
+                    message= _ "The Council of Westin has summoned many of our brethren from our allies to the north!"
                 [/message]
 
                 {NAMED_LOYAL_UNIT 1 (Silver Mage) 11 1 (Minister Mefel) (_"Minister Mefel")}
@@ -512,7 +512,7 @@
 
         [message]
             speaker="Mal M'Brin"
-            message= _ "Aaargh! You dare strike me?! Puny humans, I am the darkness incarnate! I am power beyond your comprehension!"
+            message= _ "You dare strike me?! Puny humans, I am darkness incarnate! I am power beyond your comprehension!"
         [/message]
 
         [message]
@@ -530,9 +530,10 @@
             message= _ "These worthless humans just bested you and your armies. Your time has come, once wise sage of the elves."
         [/message]
 
+        # po: "Nooo" is like a death scream, just a drawn out no
         [message]
             speaker="Mal M'Brin"
-            message= _ "Beaten... by mere mortals... how has it come to this..? Noooo..."
+            message= _ "Beaten... by mere mortals... how has it come to this..? Nooo..."
         [/message]
     [/event]
 
