TSG S9a: dialogue revision

--- a/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
@@ -158,7 +158,7 @@
         [/unit]
         [message]
             speaker=Ithelden
-            message= _ "You will pay for killing Mebrin!"
+            message= _ "You will pay for the death of Mebrin!"
         [/message]
         [message]
             speaker=Poor Farmer
@@ -195,11 +195,11 @@
         [/message]
         [message]
             speaker=Ithelden
-            message= _ "I can hardly believe me ears. You have always been too soft, Ethiliel, but to side with the humans? All humans are scum and vermin! Just as they have felled our trees in the past, they have destroyed our homes, murdered our people, and killed Mebrin!"
+            message= _ "I can hardly believe my ears. You have always been too soft, Ethiliel, but to side with the humans? All humans are scum and vermin! Just as they have felled our trees in the past, they have destroyed our homes, murdered our people, and killed Mebrin!"
         [/message]
         [message]
             speaker=Ethiliel
-            message= _ "Mebring was my master, Ithelden! It is <i>I</i> who grieves the most! I have spent countless, sleepless nights thinking about his death and missing him so dearly that my heart never ceases to ache. You know how I must feel about losing one that I cherished so. Still... still, even I recognize that these humans are not the ones to blame."
+            message= _ "Mebrin was my master, Ithelden! It is <i>I</i> who grieves the most! I have spent countless, sleepless nights thinking about his death and missing him so dearly that my heart never ceases to ache. You know how I must feel about losing one that I cherished so. Still... still, even I recognize that these humans are not the ones to blame."
         [/message]
         [message]
             speaker=Ithelden
@@ -236,7 +236,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "Ugh. Ever the stubborn one. Deoran, we will not be able to fight them for very long. I need to go reason with Ithelden, but you need to protect me until I can reach him. Do you think you can do that?"
+            message= _ "Ever the stubborn one. Deoran, we will not be able to fight them for very long. I need to go reason with Ithelden, but you need to protect me until I can reach him. Do you think you can do that?"
         [/message]
         [message]
             speaker=Deoran
