Elvish Fighter: description revision
Removed possibly confusing phrase.

--- a/data/core/units/elves/Fighter.cfg
+++ b/data/core/units/elves/Fighter.cfg
@@ -15,7 +15,7 @@
     advances_to=Elvish Captain,Elvish Hero
     cost=14
     usage=fighter
-    description= _ "Among elves, swordplay is most commonly practiced by rangers and border patrols, who serve primarily as guardians of the forests and more occasionally as small squads for intrusions into other territories. Elvish swordsmanship is known for its emphasis on swift, agile strikes, generating less power than human or orcish warriors, but also leaving less time to react and counter. While difficult to master, most elves can learn the basics of swordplay relatively quickly and will readily pick up the blade when confronted with battle."
+    description= _ "Among elves, swordplay is most commonly practiced by rangers and border patrols, who serve primarily as guardians of the forests and more occasionally as small squads for intrusions into other territories. Elvish swordsmanship is known for its emphasis on swift, agile strikes, generating less power than human or orcish warriors, but also leaving less time to react and counter. Most elves can learn the basics of swordplay relatively quickly and will readily pick up the blade when confronted with battle."
     die_sound={SOUND_LIST:ELF_HIT}
     [attack]
         name=sword
