help: Fix broken link
Reported in #2963

--- a/data/core/terrain.cfg
+++ b/data/core/terrain.cfg
@@ -295,7 +295,7 @@
     string=Dd
     aliasof=Dt
     editor_group=desert
-    help_topic_text= _ "<italic>text='Deserts'</italic> have a somewhat different composition than small sand pits or beaches, however for gameplay purposes they are identical. See <ref>dst='terrain_sand' text='sand'</ref>."
+    help_topic_text= _ "<italic>text='Deserts'</italic> have a somewhat different composition than small sand pits or beaches, however for gameplay purposes they are identical. See <ref>dst='..terrain_sand' text='sand'</ref>."
 [/terrain_type]
 
 [terrain_type]
