--- a/data/core/encyclopedia/geography.cfg
+++ b/data/core/encyclopedia/geography.cfg
@@ -10,7 +10,7 @@
 [section]
     id=geography
     title= _ "Geography"
-    topics=..geography,great_ocean,morogor,green_isle,old_continent,great_continent,irdya,kingdom_wesnoth,elensefar,northlands,far_north,heart_mountains,arkan_thoria,southwest_elven_lands
+    topics=..geography,great_ocean,morogor,green_isle,old_continent,great_continent,irdya,kingdom_wesnoth,elensefar,northlands,far_north,heart_mountains,arkan_thoria,southwest_elven_lands,great_river
     sort_topics=yes
 [/section]
 
@@ -25,6 +25,12 @@
     id=arkan_thoria
     title= _ "Arkan-thoria"
     text= _ "A river rising in the <ref>dst='heart_mountains' text='Heart Mountains'</ref> and running east to the Listra."
+[/topic]
+
+[topic]
+    id=great_river
+    title= _ "Great River"
+    text= _ "The Great River forms the boundary between the <ref>dst='kingdom_wesnoth' text='Kingdom of Wesnoth'</ref> and the <ref>dst='northlands' text='Northlands'</ref>. It empties to the <ref>dst='great_ocean' text='Great Ocean'</ref> at <ref>dst='elensefar' text='Elensefar'</ref>."
 [/topic]
 
 [topic]
