--- a/data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg
@@ -94,15 +94,45 @@ _" This unit is capable of healing those around it, slowing dehydration, and cur
     [/attacks]
 #enddef
 
+
+#define FORMATION ID GREATER_THAN COUNT
+ [chance_to_hit]
+                        id={ID}
+                        apply_to=opponent
+                        sub=10
+                        [filter_base_value]
+                            greater_than_equal_to={GREATER_THAN}
+                        [/filter_base_value]
+						[filter_self]
+                            [filter_adjacent]
+                                ability=formation
+                                is_enemy=no
+                                count={COUNT}
+                            [/filter_adjacent]
+							[/filter_self]
+                    [/chance_to_hit]
+#enddef
 #define ABILITY_FORMATION
     [dummy]
         id=formation
         name= _ "formation"
         female_name= _ "female^formation"
         description= _ "This unit gains a +10% bonus to defense when another unit with the same ability is adjacent to it. However, this cannot raise the unit’s defense above 70%."
-    [/dummy]
+    
+[filter]
+                            [filter_adjacent]
+                                ability=formation
+                                is_enemy=no
+                                count=1-5
+                            [/filter_adjacent]
+							[/filter]
+		[/dummy]
+		{FORMATION formation1 40 1-5}
+		{FORMATION formation2 50 2-5}
+		{FORMATION formation3 60 3-5}
+		{FORMATION formation4 70 4-5}
+		{FORMATION formation5 80 5}
 #enddef
-
 #define ABILITY_DISENGAGE
     [dummy]
         id=disengage
