--- a/data/core/units/elves/Scout.cfg
+++ b/data/core/units/elves/Scout.cfg
@@ -18,7 +18,7 @@
     cost=18
     undead_variation=mounted
     usage=scout
-    description= _ "The horsemen of the wood elves have some skill with bow and sword, but their true skill lies in their horsemanship. Even other elves are impressed by their uncanny speed in the woods, and their ability to dart through the thick of the forest with nary a scratch. They may be the only cavalry in existence that fares better in the woods than on open ground."
+    description= _ "Although the equines bred by the wood elves are much faster and much more agile than a regular horse, they tend to be more fickle and harder to master. It takes many years to train an Elven pony, but once tamed, they are among the most loyal and devoted mounts. These special horses allow Elvish horsemen to ride at extreme speeds through thick forests and outpace most other cavalry on open ground. Though these riders possess some skill in wielding swords and bows, their greatest effectiveness comes from their ability to scout and outmaneuver enemy forces rather than engage in combat directly. Elvish scouts are most often used as messengers and support units and are adept at quickly transferring information between patrols and skirmish groups, whom they also reinforce when necessary."
     die_sound=horse-die.ogg
     [defense]
         village=60
