SotBE S3: Don't put two [endlevel]s in the same event
In case this event was fired, a lua warning was displayed
on the screen.

--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg
@@ -371,15 +371,15 @@
                     speaker=Blemaker
                     message= _ "My son! I should have never brought him to this fight. Now we return to our caverns, and we never return."
                 [/message]
-                [endlevel]
-                    result=defeat
-                [/endlevel]
             [/then]
+            [else]
+                [message]
+                    speaker="Kapou'e"
+                    message= _ "The trolls are done. We will desperately need their help in the coming battles. Without them there is no hope."
+                [/message]
+            [/else]
         [/if]
-        [message]
-            speaker="Kapou'e"
-            message= _ "The trolls are done. We will desperately need their help in the coming battles. Without them there is no hope."
-        [/message]
+
         [endlevel]
             result=defeat
         [/endlevel]
