TRoW: General cleanup
Clear variables, macros and comments

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/04a_The_Swamp_of_Esten.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/04a_The_Swamp_of_Esten.cfg
@@ -655,3 +655,7 @@ Enter at Your Own Risk!"
         [/message]
     [/event]
 [/scenario]
+
+#undef TEMPLE_HELP
+#undef TEMPLE_TRAP
+#undef TEMPLE_LOOT
