--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/07_Return_to_Oldwood.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/07_Return_to_Oldwood.cfg
@@ -314,7 +314,7 @@
             speaker=Burin the Lost
             message= _ "Finally, we’re getting out of this forest!"
         [/message]
-        {CLEAR_VARIABLE have_lady}
+        {CLEAR_VARIABLE have_lady,heal_amount}
         [endlevel]
             result=victory
             bonus=no
