TRoW: General cleanup
Clear variables, macros and comments

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg
@@ -110,7 +110,7 @@
 
     [event]
         name=prestart
-        {CLEAR_VARIABLE last_done}
+        {CLEAR_VARIABLE last_done,escape_choice}
 
         {PLACE_IMAGE (scenery/temple1.png) 23 22}
         {PLACE_IMAGE (scenery/castle-ruins.png) 5 5}
