--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_The_Kalian.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_The_Kalian.cfg
@@ -582,3 +582,11 @@
         [/switch]
     [/event]
 [/scenario]
+
+#undef DRAGON
+#undef BEACH
+#undef HOLE
+#undef ISLE
+#undef QUEST_CHOICES
+#undef QUESTS
+#undef GREET
