TRoW: Replace deprecated keys

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg
@@ -309,7 +309,7 @@
         [modify_side]
             side=4
             fog=yes
-            share_view=yes
+            share_vision=all
         [/modify_side]
         [redraw]
             side=4
