--- a/data/campaigns/The_Rise_Of_Wesnoth/utils/trow-macros.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/utils/trow-macros.cfg
@@ -86,7 +86,8 @@
         side=2
         x=$x1
         y=$y1
-        placement=map_overwrite
+        placement=map
+        overwrite=yes
         moves=0
         attacks_left=0
         variation=$unit.undead_variation
