TRoW: Fix some TODOs and add more

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg
@@ -472,6 +472,10 @@
             facing=sw
         [/unit]
 
+        #TODO: This is the first time we meet Jevyan and nobody has told us about his
+        #existence before. Despite all this, only Jessene shows surprise, as if Haldric
+        #knows who he is, and at the end of the scenario we get no further information.
+
         [message]
             speaker=Lich-Lord Jevyan
             message= _ "King Addroran, your day is done. Prepare to be ground to dust. If you’re lucky I may raise you from death for my own amusement. Oh, and what’s this? I sense, I sense the Ruby of Fire."
