--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/19_The_Vanguard.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/19_The_Vanguard.cfg
@@ -147,9 +147,18 @@
     [event]
         name=prestart
 
-        # TODO: better random locations
-        {VARIABLE_OP xx1 rand "10..18"}
-        {VARIABLE_OP yy1 rand "2..6"}
+        [store_locations]
+            terrain=Gg
+            x=11-18
+            y=2-6
+            variable=possible_chest_locs
+        [/store_locations]
+        {RANDOM "0..$($possible_chest_locs.length - 1)"}
+
+        {VARIABLE xx1 $possible_chest_locs[$random].x}
+        {VARIABLE yy1 $possible_chest_locs[$random].y}
+
+        {CLEAR_VARIABLE possible_chest_locs,random}
 
         {PLACE_IMAGE (items/chest-plain-closed.png) $xx1 $yy1}
 
