--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/04a_The_Swamp_of_Esten.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/04a_The_Swamp_of_Esten.cfg
@@ -391,6 +391,7 @@
         [message]
             speaker=Prince Haldric
             message= _ "Careful, you don’t know what’s lurking in there!"
+            #TODO: Have Haldric say something else (or nothing) if he moves to the temple
         [/message]
         [unit]
             side=1
