--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/04b_The_Midlands.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/04b_The_Midlands.cfg
@@ -244,6 +244,10 @@
         [/allow_undo]
     [/event]
 
+    #TODO: In 4b we get Minister Edren AND Sir Ruddry, so we have 2 loyal units
+    #who are recalled in every following scenario. Here we get only Sir Ladoc,
+    #so 1 loyal unit only. This should be somehow rebalanced
+
     [event]
         name=attack
 
