TRoW S6: Replace old sound with unit's own defending animation

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/06_Temple_in_the_Deep.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/06_Temple_in_the_Deep.cfg
@@ -256,9 +256,22 @@
                     [/then]
 
                     [else]
-                        [sound]
-                            name=ugg.wav
-                        [/sound]
+                        [animate_unit]
+                            [filter]
+                                id=$unit.id
+                            [/filter]
+                            flag=defend
+                            hits=yes
+                            [primary_attack]
+                                range=melee
+                            [/primary_attack]
+                            [secondary_attack]
+                                name=$unit.attack[0].name
+                            [/secondary_attack]
+                            [facing]
+                                x,y=13,0
+                            [/facing]
+                        [/animate_unit]
 
                         [message]
                             speaker=narrator
