TRoW S15: Update Dionli's unit image

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg
@@ -428,7 +428,7 @@
             y=3,5,6
         [/move_unit_fake]
 
-        {HERO (Elvish Shyde) (Lady Dionli) ( _ "Lady Dionli") 2 39 6 ("portraits/dionli.png")}
+        {HERO (Autumn Shyde) (Lady Dionli) ( _ "Lady Dionli") 2 39 6 ("portraits/dionli.png")}
         [+unit]
             facing=sw
         [/unit]
