TRoW S17d: Kill all enemy units in the end
For consistency to what Haldric says before

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg
@@ -420,6 +420,10 @@
             message= _ "Without their queen the undead are simply fading away!"
         [/message]
         {CLEAR_VARIABLE queen_awake}
+        [kill]
+            side=2,3
+            fire_event=no
+        [/kill]
         [endlevel]
             result=victory
             bonus=yes
