TRoW S22: Fix win and defeat conditions
This makes sure that when Jevyan dies, we check for Aethyr's
presence before doing anything, so the player loses immediately
if he's alive.
Furthermore, we must hide the last orc leader, or his death will
make the player lose.

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg
@@ -539,6 +539,11 @@
                 canrecruit=yes
                 count=2-4
             [/have_unit]
+            [not]
+                [have_unit]
+                    id=Commander Aethyr
+                [/have_unit]
+            [/not]
         [/filter_condition]
 
         [message]
@@ -635,12 +640,20 @@
                     id=Lich-Lord Jevyan
                 [/have_unit]
             [/not]
+            [not]
+                [have_unit]
+                    id=Commander Aethyr
+                [/have_unit]
+            [/not]
         [/filter_condition]
 
         [store_unit]
             [filter]
                 side=3,4,5,6
                 canrecruit=yes
+                [not]
+                    x,y=$x1,$y1
+                [/not]
             [/filter]
 
             kill=no
@@ -723,11 +736,10 @@
             [/case]
         [/switch]
 
-        [kill]
+        [hide_unit]
             side=$last_orc_leader.side
             canrecruit=yes
-            fire_event=no
-        [/kill]
+        [/hide_unit]
 
         [move_unit_fake]
             side=$last_orc_leader.side
