TRoW: use [show_if] inside the [objectives] tag

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg
@@ -272,6 +272,15 @@
                 description= _ "Death of King Addroran IX"
                 condition=lose
             [/objective]
+            [objective]
+                description= _ "Death of Lord Typhon"
+                condition=lose
+                [show_if]
+                    [have_unit]
+                        id=Lord Typhon
+                    [/have_unit]
+                [/show_if]
+            [/objective]
 
             {TURNS_RUN_OUT}
 
@@ -403,36 +412,8 @@
             side=1
             type=Merman Fighter,Merman Hunter
         [/allow_recruit]
-        [objectives]
-            side=1
-            [objective]
-                description= _ "Defeat all enemy leaders"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Prince Haldric"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Lady Jessene"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of King Addroran IX"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Lord Typhon"
-                condition=lose
-            [/objective]
-
-            {TURNS_RUN_OUT}
-
-            [gold_carryover]
-                bonus=yes
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
     [/event]
 
     [event]
