--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg
@@ -169,28 +169,8 @@
             message= _ "Get her before she ensorcels us all!"
             image=portraits/haldric-mad.png
         [/message]
-        [objectives]
-            side=1
-            [objective]
-                description= _ "Defeat the Vampire Queen"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Prince Haldric"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Lady Jessene"
-                condition=lose
-            [/objective]
-
-            {TURNS_RUN_OUT}
-
-            [gold_carryover]
-                bonus=yes
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
         [set_variable]
             name=queen_awake
             value=1
@@ -305,6 +285,25 @@
             [objective]
                 description= _ "Defeat all enemy leaders"
                 condition=win
+                [show_if]
+                    [not]
+                        [have_unit]
+                            id=Midnight Queen
+                        [/have_unit]
+                    [/not]
+                    [have_unit]
+                        id=Isorfilad,Tinoldor
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat the Vampire Queen"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Midnight Queen
+                    [/have_unit]
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Prince Haldric"
@@ -456,28 +455,8 @@
                     speaker=Lady Jessene
                     message= _ "We still have to defeat that vampire queen!"
                 [/message]
-                [objectives]
-                    side=1
-                    [objective]
-                        description= _ "Defeat the Vampire Queen"
-                        condition=win
-                    [/objective]
-                    [objective]
-                        description= _ "Death of Prince Haldric"
-                        condition=lose
-                    [/objective]
-                    [objective]
-                        description= _ "Death of Lady Jessene"
-                        condition=lose
-                    [/objective]
-
-                    {TURNS_RUN_OUT}
-
-                    [gold_carryover]
-                        bonus=yes
-                        carryover_percentage=40
-                    [/gold_carryover]
-                [/objectives]
+                [show_objectives]
+                [/show_objectives]
             [/then]
             [else]
                 {CLEAR_VARIABLE queen_awake}
