TRoW: Give monsters and undeads their own sides
Noticing that orcs can control undead units feels strange. This
can give the AI an advantage too. One would expect monsters and
undeads to move autonomously.

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg
@@ -165,6 +165,16 @@
         [/ai]
     [/side]
 
+    [side]
+        side=6
+        no_leader=yes
+        team_name=Liz
+        hidden=yes
+        [ai]
+            village_value=0
+        [/ai]
+    [/side]
+
     {STARTING_VILLAGES 5 10}
 
     {campaigns/The_Rise_Of_Wesnoth/utils/trow-nlmsg.cfg}
@@ -357,7 +367,7 @@
                 numerical_equals=0
             [/variable]
             [then]
-                {NAMED_LOYAL_UNIT 5 (Fire Dragon) 20 27 ("Shek'kahan") ( _ "Shek’kahan")}
+                {NAMED_LOYAL_UNIT 6 (Fire Dragon) 20 27 ("Shek'kahan") ( _ "Shek’kahan")}
                 [+unit]
                     profile=portraits/shekkahan.png
                 [/unit]
@@ -392,7 +402,10 @@
                 numerical_equals=0
             [/variable]
             [then]
-                {NAMED_LOYAL_UNIT 5 (Fire Dragon) 20 27 ("Shek'kahan") ( _ "Shek’kahan")}
+                {NAMED_LOYAL_UNIT 6 (Fire Dragon) 20 27 ("Shek'kahan") ( _ "Shek’kahan")}
+                [+unit]
+                    profile=portraits/shekkahan.png
+                [/unit]
 
                 [set_variable]
                     name=dragon_awake
