--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg
@@ -130,6 +130,16 @@
         {FLAG_VARIANT undead}
     [/side]
 
+    [side]
+        side=5
+        no_leader=yes
+        team_name=monsters
+        user_team_name= _ "Monsters"
+        [ai]
+            village_value=0
+        [/ai]
+    [/side]
+
     [event]
         name=prestart
 
@@ -537,7 +547,7 @@
             y=1,2,3,3,4,4,5,6,7,7,8,9,10,10,11
         [/move_unit_fake]
 
-        {NAMED_LOYAL_UNIT 4 (Yeti) 12 11 (Rarlg) ( _ "Rarlg")}
+        {NAMED_LOYAL_UNIT 5 (Yeti) 12 11 (Rarlg) ( _ "Rarlg")}
 
         [message]
             speaker=Rarlg
@@ -565,7 +575,7 @@
             id=Rarlg
         [/scroll_to_unit]
 
-        {NAMED_LOYAL_UNIT 4 (Yeti) 15 11 (Raul-Rarlg) ( _ "Raul-Rarlg")}
+        {NAMED_LOYAL_UNIT 5 (Yeti) 15 11 (Raul-Rarlg) ( _ "Raul-Rarlg")}
     [/event]
 
     [event]
